# luxury-price-ai

./: .env.example  AGENTS.md  Makefile  README.md  pyproject.toml  render.yaml
docs/: luxury-price-ai-flow.md
migrations/: 001_create_auction_sales.sql
rag/: README.md  appraisal-writing-style.md  brand-category-matrix.md  brand-model-material-guide.md  category-appraisal-guide.md  chanel-model-material-guide.md  condition-rank-guide.md  photo-review-checklist.md  purchase-offer-policy.md
src/luxury_price_ai/: __init__.py  analysis.py  api.py  cli.py  config.py  dify.py  estimator.py  intake.py  model_resolver.py  models.py  normalize.py  storage.py  tokens.py  vision.py
tests/: test_analysis.py  test_image_auction_matching.py  test_strict_estimator.py
