[project]
name = "auction-price-checker-ai"
version = "0.1.0"
description = "Luxury auction sales analysis service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
luxury-price-ai = "luxury_price_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luxury_price_ai"]
